mdapi/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Customer Replied</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive %3A No response from customer</fullName>
        </values>
        <values>
            <fullName>Inactive %3A Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Inactive %3A Waiting on Patch Development</fullName>
        </values>
        <values>
            <fullName>Information Provided</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Patch Sent</fullName>
        </values>
        <values>
            <fullName>Pending Closure</fullName>
        </values>
        <values>
            <fullName>Proactive %3A Customer Contacted</fullName>
        </values>
        <values>
            <fullName>Proactive %3A No response from customer</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Activation Problem Solved</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Customer Education</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Customer Solved Own Issue</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Deactivation Problem Solved</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Environmental</fullName>
        </values>
        <values>
            <fullName>Resolved %3A HIR Code</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Manual Deactivation</fullName>
        </values>
        <values>
            <fullName>Resolved %3A No Maintenance</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Other Problem Solved</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Referred to OEM for Support</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Sales Problem Solved</fullName>
        </values>
        <values>
            <fullName>Resolved %3A Technical Support Issue</fullName>
        </values>
        <values>
            <fullName>Resolved%3A Return Request</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Escalations</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assignment_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Capture when the assignment was made to the current owner</description>
        <label>Assignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assistance_Type__c</fullName>
        <label>Assistance Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_User_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licensing Assistance</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Sales Assistance</fullName>
                </value>
                <value>
                    <fullName>Product_Return</fullName>
                    <label>Product Return / RMA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Name__c</fullName>
        <formula>BLANKVALUE(Owner:Queue.QueueName, Owner:User.FirstName+&quot; &quot;+ Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Review_Comments__c</fullName>
        <label>Case Review: Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Review_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Review_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Review_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Review_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Review_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Review_Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Review: Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Assistance_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LA - I am requesting a license deactivation.</fullName>
                </value>
                <value>
                    <fullName>LA - I have a licensing question.</fullName>
                </value>
                <value>
                    <fullName>LA - My license has expired.</fullName>
                </value>
                <value>
                    <fullName>LA - My license will expire in less than 3 days.</fullName>
                </value>
                <value>
                    <fullName>LA - I am getting an error when trying to activate or deactivate my license.</fullName>
                </value>
                <value>
                    <fullName>LA - Requesting an IT Edition Replacement USB Key.</fullName>
                </value>
                <value>
                    <fullName>TA - Test environment issues(Low)</fullName>
                </value>
                <value>
                    <fullName>TA - Questions, best practices, configuration, setup or general product information(Low)</fullName>
                </value>
                <value>
                    <fullName>TA - Website issues(Low)</fullName>
                </value>
                <value>
                    <fullName>TA - Installation and Upgrade issues(Med)</fullName>
                </value>
                <value>
                    <fullName>TA - Intermittent applications errors, backups succeed(Med)</fullName>
                </value>
                <value>
                    <fullName>TA - Application crashes or has errors or the backups fail(High)</fullName>
                </value>
                <value>
                    <fullName>TA - Backup Images fail to verify(High)</fullName>
                </value>
                <value>
                    <fullName>TA - Restore of the machine fails(High)</fullName>
                </value>
                <value>
                    <fullName>TA - Partner Physically at Client Site(Emergency)</fullName>
                </value>
                <value>
                    <fullName>TA - Production Server Down(Emergency)</fullName>
                </value>
                <value>
                    <fullName>SA - I would like a product demo, and or more information on product training.</fullName>
                </value>
                <value>
                    <fullName>SA - I have a presales question regarding ShadowProtect or ShadowControl products.</fullName>
                </value>
                <value>
                    <fullName>SA - I want a quote for ShadowProtect or ShadowControl products.</fullName>
                </value>
                <value>
                    <fullName>SA - I have an issue or question with licensing upgrades.</fullName>
                </value>
                <value>
                    <fullName>SA - I have an issue or question with maintenance.</fullName>
                </value>
                <value>
                    <fullName>SA - I have an issue or question with the partner portal.</fullName>
                </value>
                <value>
                    <fullName>SA - I have an issue or question with the webstore.</fullName>
                </value>
                <value>
                    <fullName>SA - I have an issue or question with NFR (not for resale) licenses.</fullName>
                </value>
                <value>
                    <fullName>SA - Other question or issue not listed here.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Text__c</fullName>
        <description>Used to make Contact Name searchable.</description>
        <label>Contact Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_On__c</fullName>
        <label>First Owner On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Emergency_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger workflow rules to remind staff about unclaimed emergency case.</description>
        <label>Needs Emergency Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Component__c</fullName>
        <label>Product Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Activation / Licensing</fullName>
                </value>
                <value>
                    <fullName>Admin Console</fullName>
                </value>
                <value>
                    <fullName>Advanced Verification</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Appliance Install</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>BMR</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Builder / Windows RE</fullName>
                </value>
                <value>
                    <fullName>Capacity / Sizing</fullName>
                </value>
                <value>
                    <fullName>Certificate Request</fullName>
                </value>
                <value>
                    <fullName>Cloud Portal</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>CrossPlatform RE</fullName>
                </value>
                <value>
                    <fullName>Datacenter</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Disk Copy</fullName>
                </value>
                <value>
                    <fullName>EDB Load</fullName>
                </value>
                <value>
                    <fullName>Endpoint</fullName>
                </value>
                <value>
                    <fullName>Endpoint Installation</fullName>
                </value>
                <value>
                    <fullName>Explore Backup</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Google Apps</fullName>
                </value>
                <value>
                    <fullName>GRE Console</fullName>
                </value>
                <value>
                    <fullName>G Suite</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <label>Product Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1.0.0</fullName>
                </value>
                <value>
                    <fullName>1.10</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>1.9</fullName>
                </value>
                <value>
                    <fullName>1.x</fullName>
                </value>
                <value>
                    <fullName>2.0.1.27</fullName>
                </value>
                <value>
                    <fullName>2.0.1.35</fullName>
                </value>
                <value>
                    <fullName>2.1.0</fullName>
                </value>
                <value>
                    <fullName>2.1.1</fullName>
                </value>
                <value>
                    <fullName>2.10</fullName>
                </value>
                <value>
                    <fullName>2.11</fullName>
                </value>
                <value>
                    <fullName>2.12</fullName>
                </value>
                <value>
                    <fullName>2.13</fullName>
                </value>
                <value>
                    <fullName>2.14</fullName>
                </value>
                <value>
                    <fullName>2.14.1</fullName>
                </value>
                <value>
                    <fullName>2.15</fullName>
                </value>
                <value>
                    <fullName>2.15.1</fullName>
                </value>
                <value>
                    <fullName>2.15.2</fullName>
                </value>
                <value>
                    <fullName>2.15.3</fullName>
                </value>
                <value>
                    <fullName>2.15.4</fullName>
                </value>
                <value>
                    <fullName>2.15.5</fullName>
                </value>
                <value>
                    <fullName>2.16</fullName>
                </value>
                <value>
                    <fullName>2.16.1</fullName>
                </value>
                <value>
                    <fullName>2.17</fullName>
                </value>
                <value>
                    <fullName>2.17.1</fullName>
                </value>
                <value>
                    <fullName>2.2.0</fullName>
                </value>
                <value>
                    <fullName>2.2.2</fullName>
                </value>
                <value>
                    <fullName>2.2.4</fullName>
                </value>
                <value>
                    <fullName>2.3.0</fullName>
                </value>
                <value>
                    <fullName>2.5.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Assistance_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud_Backup</fullName>
                    <label>Cloud Backup</label>
                </value>
                <value>
                    <fullName>Cloud_Services</fullName>
                    <label>Cloud Services</label>
                </value>
                <value>
                    <fullName>File_Backup_and_Recovery</fullName>
                    <label>File Backup and Recovery</label>
                </value>
                <value>
                    <fullName>Granular_Recovery_for_Exchange</fullName>
                    <label>Granular Recovery for Exchange</label>
                </value>
                <value>
                    <fullName>ImageManager</fullName>
                </value>
                <value>
                    <fullName>OneBlox</fullName>
                </value>
                <value>
                    <fullName>Recovery_Environments</fullName>
                    <label>Recovery Environments</label>
                </value>
                <value>
                    <fullName>ShadowControl</fullName>
                </value>
                <value>
                    <fullName>ShadowProtect_Linux</fullName>
                    <label>ShadowProtect (Linux)</label>
                </value>
                <value>
                    <fullName>ShadowProtect_Windows</fullName>
                    <label>ShadowProtect (Windows)</label>
                </value>
                <value>
                    <fullName>StorageCraft_Websites</fullName>
                    <label>StorageCraft Websites</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Distributors Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                    <label>Country Partner</label>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number_Details__c</fullName>
        <label>Serial Number Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number or Account/Machine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supress_License_Check__c</fullName>
        <description>Used to prevent web cases from requiring license maintenance validation.
ONLY USE LOCAL FIELDS. Apex recalculates formula on-demand but can only do it using local fields, and only values that are available on submit.</description>
        <formula>OR(
ISPICKVAL(Priority, &apos;Emergency&apos;),
NOT(ISBLANK(Web_Form_Incident_Pack__c)),
ISPICKVAL(Assistance_Type__c, &apos;Sales Assistance&apos;),
ISPICKVAL(Assistance_Type__c, &apos;Licensing Assistance&apos;),
ISPICKVAL(Assistance_Type__c, &apos;Product_Return&apos;),
ISPICKVAL(Product__c, &apos;Cloud_Services&apos;),
ISPICKVAL(Product__c, &apos;ShadowProtect IT Edition&apos;),
ISPICKVAL(Product__c, &apos;File_Backup_and_Recovery&apos;),
ISPICKVAL(Product__c, &apos;Oneblox&apos;),
ISPICKVAL(Product__c, &apos;Cloud_Backup&apos;),
ISPICKVAL(Product__c, &apos;StorageCraft_Websites&apos;),
ISPICKVAL(Select_User_Type__c, &apos;Trial User&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supress License Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TZ_UTC_Offset__c</fullName>
        <description>Number of hours case submitter is offset from UTC.</description>
        <label>TZ UTC Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska Time (2 hours behind)</fullName>
                </value>
                <value>
                    <fullName>Atlantic Time (3 hours ahead)</fullName>
                </value>
                <value>
                    <fullName>Central Time (1 hour ahead)</fullName>
                </value>
                <value>
                    <fullName>Eastern Time (2 hours ahead)</fullName>
                </value>
                <value>
                    <fullName>Hawaii Time (4 hours behind)</fullName>
                </value>
                <value>
                    <fullName>Mountain Time (Current Time)</fullName>
                </value>
                <value>
                    <fullName>Newfoundland Time (3.5 hours ahead)</fullName>
                </value>
                <value>
                    <fullName>Pacific Time (1 hour behind)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Form_Incident_Pack__c</fullName>
        <label>Web Form Incident Pack</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webform_Order_Number__c</fullName>
        <label>Webform Order Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>WebForm</fullName>
        <active>true</active>
        <businessProcess>Support</businessProcess>
        <label>WebForm</label>
    </recordTypes>
</CustomObject>